crates/cli/tests/setup/snapshots/setup__prompt__prompt_connector_matches_snapshot.snap
---
source: crates/cli/tests/setup/prompt.rs
expression: text
---
This environment includes Crystalline, your crystallized intelligence across sessions, over MCP. At the start of every session call its list_domains tool with include_routing set to true; the result is your onboarding: one routing line per domain plus the behavior rules for this server's tools. Follow it, search those domains before answering from memory and re-fetch it mid-session with the same call whenever you need it again.
