crates/cli/tests/setup/snapshots/setup__prompt__prompt_json_read_only_matches_snapshot.snap
---
source: crates/cli/tests/setup/prompt.rs
expression: json
---
{
  "version": 1,
  "kind": "system",
  "read_only": true,
  "workspace": "workspace",
  "domains": [
    {
      "name": "gardening",
      "bullets": [
        "(routing information unavailable: MANIFEST.md is missing or unreadable)"
      ],
      "preferred": true
    },
    {
      "name": "astronomy",
      "bullets": [
        "When asked about moons or planets",
        "When comparing orbital periods"
      ],
      "preferred": false
    }
  ]
}
